# NarrateX

./: .coveragerc  .flake8  .gitignore  ARCHITECTURE.md  ARCHITECTURE_CONSTRAINTS.md  CNAME  DEVELOPMENT-README.md  LGPL3-LICENSE  LINUX-INSTALLATION.md  NarrateX.spec  NarrateXSetup.spec  README.md  TESTING.md  app.py  build_flatpak.sh  builddmg.py  buildexe.py  buildinstaller.py  buildlinux.py  buildpyinstaller.py  cleanup_flatpak.sh  download.html  index.html  pdf_head.txt  preferences.json  pyproject.toml  repro_before.txt  requirements-flatpak.txt  requirements-linux.txt  requirements-mac.txt  requirements.txt  robots.txt  site.webmanifest  sitemap.xml  styles.css  why.html
installer/: __init__.py  app.py  build_payload.py  cli.py  constants.py
installer/ops/: __init__.py  errors.py  install_ops.py  payload.py  progress.py  repair_ops.py  running_app.py  shortcuts.py  staging.py  uninstall_ops.py
installer/payload/: __init__.py
installer/resources/: __init__.py
installer/shared/: __init__.py  logging_setup.py  resource_path.py
installer/state/: __init__.py  model.py  registry.py  versioning.py
installer/ui/: __init__.py  _header_fit.py  _main_window_actions.py  _main_window_build.py  _main_window_progress.py  _main_window_types.py  _main_window_uninstall.py  _safe_label.py  icons.py  lgpl3_license_text.py  licence_dialog.py  main_window.py  themes.py  worker.py
plans/: ideas_architecture_brief.md  ideas_background_execution.md  ideas_data_model.md  ideas_implementation_plan.md  ideas_indexing_algorithm.md  ideas_repo_integration_mapping.md  ideas_ux_flow.md
tests/: app_main_testkit.py  conftest.py  test_app_icon_fallback_when_ico_unloadable.py  test_app_identity_and_icon.py  test_app_main.py  test_app_preflight_and_startup_logging.py  test_app_run_as_main.py  test_app_windows_identity_ctypes_call.py  test_book_load_worker.py  test_bootstrap_module_is_coverable.py
tests/application/: narration_service_fakes.py  test_bookmark_service.py  test_chapter_index_from_sections.py  test_chapter_index_service.py  test_chapter_major_levels.py  test_chapter_progress.py  test_device_detection_service.py  test_front_matter_body_start_regression_move_space.py  test_front_matter_marker_parenthetical_variants.py  test_idea_index_worker.py  test_idea_indexer_scope.py  test_idea_indexer_v1.py  test_idea_indexing_manager.py  test_idea_map_service.py  test_ideas_staging.py  test_narration_service.py  test_narration_service_idea_goto_semantics.py  (+11 more)
voice_reader/: __init__.py  book_load_worker.py  bootstrap.py  version.py
(+314 files in other folders)
